--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,36 +1,32 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
-name: Node.js Package
-
+name CI_action
 on:
-  release:
-    types: [created]
+  push:
+   branches: [main]
+  pull:
+    branches: [main]
 
 jobs:
-  build:
+  build: 
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - run: npm ci
-      - run: npm test
+    
+  startegy:
+    matrix:
+      node-version: [12.x]
 
-  publish-gpr:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  steps:
+   - name: Checkout repository
+     uses: actions/checkout@v2
+   
+   - name: Steup Node.js ${{ matrix.node-version}}
+     uses: actions/setup-node@v1
+     with: 
+      node-version: $ ${{ matrix.node-version}}
+     
+    - name: Install dependencies
+      run: npm install
+    
+    - name: Run the tests
+      run: npm test
+    
+    - name: Build
+      run: npm run build
