--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,32 +1,33 @@
 name CI_action
+
 on:
-  push:
-   branches: [main]
-  pull:
-    branches: [main]
+   push:
+     branches: [main]
+   pull_request:
+     branches: [main]
 
 jobs:
-  build: 
-    runs-on: ubuntu-latest
-    
-  startegy:
-    matrix:
-      node-version: [12.x]
+  build:
+     runs-on: ubuntu-latest
 
-  steps:
-   - name: Checkout repository
-     uses: actions/checkout@v2
-   
-   - name: Steup Node.js ${{ matrix.node-version}}
-     uses: actions/setup-node@v1
-     with: 
-      node-version: $ ${{ matrix.node-version}}
-     
-    - name: Install dependencies
-      run: npm install
-    
-    - name: Run the tests
-      run: npm test
-    
-    - name: Build
-      run: npm run build
+     strategy:
+       matrix:
+         node-version: [12.x]
+
+     steps:
+       - name: Checkout repository
+         uses: actions/checkout@v2
+         
+       - name: Set up Node.js ${{ matrix.node-version }}
+         uses: actions/setup-node@v1
+         with:
+            node-version: ${{ matrix.node-version }}
+
+       - name: Install dependencies
+         run: npm install
+
+       - name: Run the tests
+         run: npm test
+
+       - name: Checkout repository
+         run: npm run build
