--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,14 @@ on:
 jobs:
   build:
      runs-on: ubuntu-latest
+     defaults:
+       run:
+         working-directory: ./cise_ass1a_worksheet2/cise_ass1a_worksheet2-frontend
 
      strategy:
        matrix:
          node-version: [12.x]
+         
 
      steps:
        - name: Checkout repository
